--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "type": "module",
   "scripts": {
     "dev": "wrangler dev src/index.ts",
-    "deploy": "wrangler deploy --minify src/index.ts"
+    "deploy": "wrangler deploy --minify src/index.ts",
+    "db:create": "bunx wrangler d1 create vwh-upload-database",
+    "db:generate": "drizzle-kit generate:sqlite",
+    "db:migrate": "bunx wrangler d1 migrations apply vwh-upload-database --local",
+    "db:admin": "drizzle-kit up:sqlite"
   },
   "dependencies": {
+    "@libsql/client": "^0.11.0",
+    "drizzle-orm": "^0.30.4",
     "hono": "^4.6.1",
     "node-cloudflare-r2": "^0.3.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240909.0",
     "@types/bun": "latest",
+    "drizzle-kit": "^0.20.14",
+    "dotenv": "^16.4.5",
     "wrangler": "^3.78.2"
   }
 }
